--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         // --- Gemini API Calls ---
         async function callGemini(prompt, data = null) {
-            const apiKey = ""; // Injected by environment
+            const apiKey = "AIzaSyB6zySO-ubAxm0zZXWZnkhR4Sil6WtBPJE"; // Injected by environment
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
             
             let parts = [{ text: prompt }];
